<resources>
    <string name="app_name">Android Tasks</string>
    <string name="task_1">Task 1</string>
    <string name="task_2">Task 2</string>
    <string name="task_3">Task 3</string>
    <string name="task_4">Task 4</string>
    <string name="task_5">Task 5</string>
    <string name="task_6">Task 6</string>
    <string name="task_7">Task 7</string>
    <string name="action_about">About</string>
    <string name="action_setting">Setting</string>
    <string name="action_display_about">Display About</string>

    <string name="title_activity_task1">Color picker</string>
    <string name="title_activity_task2">Button creator</string>
    <string name="title_activity_task3">SeekBar</string>
    <string name="title_activity_task4">Firebase chat</string>
    <string name="title_activity_task5">Calculator</string>
    <string name="title_activity_task6">Task6Activity</string>

    <!--Task 1-->
    <string name="tap_button">Tap button</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="blue_task1">Blue</string>
    <string name="green_task1">Green</string>
    <string name="red_task1">Red</string>
    <string name="tap_the_button_task1">Tap the button</string>


    <!--Task 2-->
    <string name="rb_left">Left</string>
    <string name="rb_center">Center</string>
    <string name="rb_right">Right</string>
    <string name="buttons_name_text">Name</string>
    <string name="create_btn">Create</string>
    <string name="clear_btn">Clear</string>
    <string name="message_task4">Message</string>
    <string name="logout_task4">Logout</string>
    <string name="message_hint_task4">Message</string>
    <string name="time_hint_task4">Time</string>
    <string name="user_hint_task4">User</string>

    <!--Task 5-->
    <string name="sum_t5">+</string>
    <string name="res_t5">=</string>
    <string name="min_t5">-</string>
    <string name="dev_t5">/</string>
    <string name="mult_t5">x</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
    <string name="btn00">00</string>
    <string name="btn_comma">,</string>
    <string name="calculator">Calculator</string>
    <string name="del_t5">DEL</string>

    <!--Task 6-->
    <string name="call_t6">Call</string>
    <string name="web_t6">Web</string>
    <string name="map_t6">Map</string>
    <string name="camera_t6">Camera</string>
    <string name="open_color_picker_t6">Open color-picker</string>

    <string name="rename_tasks_settings">Rename tasks</string>
    <string name="general_settings">GENERAL</string>

    <string name="readfile_renameBtns">ReadFile</string>
    <string name="save_renameBtns">Save</string>
    <string name="light_btn_t1">LIGTH</string>
    <string name="middle_btn_t1">MIDDLE</string>
    <string name="dark_btn_t1">DARK</string>
    <string name="grey_t6">grey</string>
    <string name="yellow_t6">yellow</string>
    <string name="activity_label_theme">Theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="light_theme">Light theme</string>
    <string name="font_size">Font size</string>
    <string name="large">Large</string>
    <string name="middle">Middle</string>
    <string name="small">Small</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="add_cat_t7">Add the cat</string>
    <string name="photo_t7">Photo</string>
    <string name="age_t7">Age</string>
    <string name="career_t7">Career</string>
    <string name="clear_t7">Clear</string>
    <string name="update_t7">Update</string>
    <string name="delete_t7">Delete</string>
    <string name="name_t7">Name</string>
    <string name="id_t7">ID</string>
    <string name="read_t7">Read</string>
    <string name="save_t7">Save</string>
    <string name="settings_app_theme">Set app theme</string>
    <string name="settings_font_size">Font size</string>
    <string name="settings_animation">Animation</string>
    <string name="cat_photo_t7">Cat photo</string>
    <string name="name_item_t7">Name: </string>
    <string name="age_item_t7">Age: </string>
    <string name="color_item_t7">Color: </string>
    <string name="career_item_t7">Career: </string>
    <string name="input_t4">Input</string>
    <string name="edit_t7">Edit</string>
    <string name="age_card_t7">Age:</string>
    <string name="career_card_t7">Career:</string>
    <string name="color_card_t7">Color:</string>
    <string name="name_card_t7">Name:</string>
    <string name="email_t8">Email</string>
    <string name="name_t8">Name</string>
    <string name="cv_messages">CV Messages</string>
    <string name="time">Time</string>


</resources>
