<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.oleman.androidtasks.tasks.Task7Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <EditText
            android:id="@+id/name_t7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name_t7"
            android:inputType="textPersonName" />

        <Spinner
            android:id="@+id/color_t7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/age_t7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/age_t7"
            android:inputType="number" />

        <EditText
            android:id="@+id/career_t7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/career_t7"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:text="@string/photo_t7" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/save_t7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_result_selector_t5"
            android:fadeScrollbars="false"
            android:text="@string/save_t7"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="visible"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/update_t7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_result_selector_t5"
            android:text="@string/update_t7"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="ButtonStyle,RtlHardcoded" />

        <Button
            android:id="@+id/clear_t7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_result_selector_t5"
            android:text="@string/clear_t7"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="visible"
            tools:ignore="ButtonStyle" />


    </LinearLayout>
</RelativeLayout>
