<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.oleman.androidtasks.tasks.Task6Activity">


    <Button
        android:id="@+id/open_color_picker_t6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_dark_selector_t5"
        android:text="@string/open_color_picker_t6"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/call_t6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_dark_selector_t5"
        android:text="@string/call_t6"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_alignTop="@+id/map_t6"
        android:layout_alignEnd="@+id/open_color_picker_t6" />

    <Button
        android:id="@+id/web_t6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/open_color_picker_t6"
        android:layout_below="@+id/open_color_picker_t6"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_dark_selector_t5"
        android:text="@string/web_t6"
        android:textColor="@color/white"
        android:textSize="18sp" />
    <Button
        android:id="@+id/map_t6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_dark_selector_t5"
        android:text="@string/map_t6"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_alignTop="@+id/web_t6"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/screen_t6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/web_t6"
        android:layout_below="@+id/web_t6"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_dark_selector_t5"
        android:onClick="makePhoto"
        android:text="@string/camera_t6"
        android:textColor="@color/white"
        android:textSize="18sp" />
</RelativeLayout>
