<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <TextView
        android:id="@+id/tv_user_task_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/user_hint_task4" />

    <TextView
        android:id="@+id/tv_time_task4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/time_hint_task4"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/tv_message_task4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_time_task4"
        android:layout_marginTop="8dp"
        android:hint="@string/message_hint_task4"
        android:textSize="18sp"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
