<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.oleman.androidtasks.tasks.Task6Result">


    <Button
        android:id="@+id/blue_t6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/blue"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/grey_t6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/blue_t6"
        android:layout_marginTop="8dp"
        android:background="@color/main_color_task5"
        android:text="@string/grey_t6"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/yellow_t6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/grey_t6"
        android:layout_marginTop="8dp"
        android:background="@color/middle_yellow_task6"
        android:text="@string/yellow_t6"
        android:textSize="18sp" />

</RelativeLayout>
